fixed bug #15179: Third column of Administration menu hidden when screen width too low
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@57040 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -7019,7 +7019,7 @@ footer.ilFooter {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -1px !important;
+  bottom: 0 !important;
   height: 160px;
   margin: 0 auto;
   padding: 20px 0 0;
